# DaysCounter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  rust-build.yml  rust-test.yml
days-counter/: Cargo.toml
src/: build_info.rs  lib.rs  main.rs
src/calendar/: mod.rs
tests/: counter_test.rs
