[package]
name = "days-counter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.54"


[dev-dependencies]
chrono = "0.4.42"
rand = "0.9.2"


[lib]
name = "days_counter"
path = "src/lib.rs"

[[bin]]
name = "days_counter"
path = "src/main.rs"

[target.loongarch64-unknown-linux-gnu]
linker = "loongarch64-unknown-linux-gnu-gcc"